@@ -1,0 +1,3 @@
+man_MANS = synce-trayicon.1
+
+EXTRA_DIST = $(man_MANS)
