@@ -1,0 +1,22 @@
+.TH "synce-trayicon" 1 "July 2007" "The SynCE project" "http://www.synce.org"
+.SH NAME
+synce-trayicon \- Gnome system tray app for synCE
+.SH SYNOPSIS
+.B synce-trayicon
+[-f] [-d level]
+.SH DESCRIPTION
+\fBsynce-trayicon\fP is a Gnome system tray application for synCE, for
+monitoring connected Windows CE based devices.
+.SH OPTIONS
+.TP
+.B \-f
+Run in foreground (Don't detach from terminal).
+.TP
+.B \-d level
+Set debug log level: 0 - No logging, 1 - Errors only (default), 2 - Errors and warnings, 3 - Everything.
+.SH "SEE ALSO"
+synce(1),
+vdccm(1),
+odccm(1)
+.SH "AUTHOR"
+This manual page was written by Mark Ellis <mark@mpellis.org.uk>.
