@@ -1,3 +1,9 @@
+2007-07-09  Mark Ellis <mark@mpellis.org.uk>
+
+	* added man page
+	* odccm-client.c - fixed return values from odccm_device_get_rapi_connection()
+	* synce-trayicon.c - updated gnome calls
+
 2007-07-05  Mark Ellis <mark@mpellis.org.uk>
 
 	* fixed odccm support
